...
import androidx.compose.ui.semantics.semantics
import androidx.compose.ui.unit.dp
import dev.chrisbanes.haze.HazeState
import dev.chrisbanes.haze.hazeEffect

enum class ContextualNavigationAction(val contentDescription: String) {
    Back("Назад"),
}

private val AutoMirroredBackIcon: ImageVector by lazy {
    ImageVector.Builder(
        name = "AutoMirroredBack",
        defaultWidth = 24.dp,
...
